# cktk

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/cktk/core/: network_graph_builder.py  network_graph_factory.py  network_graph_transformer.py  types.py
src/cktk/core/utils/: color.py  config.py  graph.py
src/cktk/dataclasses/: network_graph.py  network_graph_config.py
src/cktk/protocols/: __init__.py  buildable.py  explodable.py  graphable.py  serializable.py
src/cktk/schemas/: network_graph_config.py  network_graph_object.py
src/cktk/utils/: create_network_graph.py  df_utils.py  explode.py  graph_util.py
tests/: test_network_graph_transformer.py
