[project]
name = "cktk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "distinctipy>=1.3.4",
    "networkx>=3.5",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E", "N", "B", "R", "I", "ANN", "PL", "UP", "D", "DOC", "TRY", "FURB", "F", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 71
preview = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 71

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
